--- a/index.html
+++ b/index.html
@@ -19,9 +19,308 @@
         
         <!-- body -->
         <div class="section">
+
+            <!-- bar-top -->
             <div class="bar-top">
-                <div class="homebanner"></div>
-                <div class="preorder-hot"></div>
+                <div class="homebanner">
+                    <div class="homebanner-slide">
+                        <img src="https://cdn.tgdd.vn/2022/03/banner/reno7-830-300-830x300.png" alt="">
+                    </div>
+                    <div class="homebanner-control">
+                        <div class="homebanner-control-item">1</div>
+                        <div class="homebanner-control-item">2</div>
+                        <div class="homebanner-control-item">3</div>
+                        <div class="homebanner-control-item">4</div>
+                    </div>
+                </div>
+                <div class="preorder-hot">
+                    <div class="img">
+                        <img src="https://cdn.tgdd.vn/2022/03/banner/laptopdesk-222-340x340.jpg" alt="">
+                    </div>
+                    <div class="img">
+                        <img src="https://cdn.tgdd.vn/2022/03/banner/laptopdesk123-340x340.jpg" alt="">
+                    </div>
+                    <div class="img">
+                        <img src="https://cdn.tgdd.vn/2022/03/banner/laptopdesk-340x340-1.jpg" alt="">
+                    </div>
+                    <div class="img">
+                        <img src="https://cdn.tgdd.vn/2022/03/banner/Smartwatch1-340x340.jpg" alt="">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- sub banner -->
+            <div class="sub-banner">
+                <img src="https://cdn.tgdd.vn/2022/03/banner/1200-60-1200x60.png" alt="">
+            </div>
+
+            <!-- sub banner -->
+            <div class="sub-banner sub-banner-prd-promo">
+
+                <!-- banner -->
+                <div class="sub-banner-prd-promo-banner">
+                    <img src="https://cdn.tgdd.vn/2022/03/banner/dessss-1200x90.png" alt="">
+                </div>
+
+                <!-- list product -->
+                <div class="sub-banner-prd-promo-list-product">
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                </div>
+
+                <!-- read more product -->
+                <div class="sub-banner-read-more">
+                    <button class="sub-banner-read-more-btn">Xem tất cả</button>
+                </div>
+            </div>
+
+            <!-- box common grid-->
+            <div class="box-common">
+                <div class="box-common-top">
+                    <div class="box-common-top-title">Điện thoại nổi bật nhất</div>
+                    <div class="box-common-top-link">
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                    </div>
+                </div>
+                <div class="box-common-main">
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- box common flex -->
+            <div class="box-common box-common-flex">
+                <div class="box-common-top">
+                    <div class="box-common-top-title">Điện thoại nổi bật nhất</div>
+                    <div class="box-common-top-link">
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                    </div>
+                </div>
+                <div class="box-common-main">
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/44/239552/macbook-air-m1-2020-gray-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/44/239552/macbook-air-m1-2020-gray-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/44/239552/macbook-air-m1-2020-gray-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/44/239552/macbook-air-m1-2020-gray-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/44/239552/macbook-air-m1-2020-gray-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
