--- a/index.html
+++ b/index.html
@@ -322,6 +322,54 @@
                     </div>
                 </div>
             </div>
+            <div class="box-common box-common-flex">
+                <div class="box-common-top">
+                    <div class="box-common-top-title">Phụ kiện nổi bật nhất</div>
+                    <div class="box-common-top-link">
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                        <div class="box-common-top-link-item"><a href="">IPhone 13 Series</a></div>
+                    </div>
+                </div>
+                <div class="box-common-main">
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/54/236016/bluetooth-airpods-2-apple-mv7n2-imei-ava-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">Tai nghe Bluetooth AirPods 2 Apple MV7N2</div>
+                        <div class="item-price">3.390.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/54/236016/bluetooth-airpods-2-apple-mv7n2-imei-ava-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">Tai nghe Bluetooth AirPods 2 Apple MV7N2</div>
+                        <div class="item-price">3.390.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/54/236016/bluetooth-airpods-2-apple-mv7n2-imei-ava-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">Tai nghe Bluetooth AirPods 2 Apple MV7N2</div>
+                        <div class="item-price">3.390.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/54/236016/bluetooth-airpods-2-apple-mv7n2-imei-ava-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">Tai nghe Bluetooth AirPods 2 Apple MV7N2</div>
+                        <div class="item-price">3.390.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/54/236016/bluetooth-airpods-2-apple-mv7n2-imei-ava-600x600.jpg" alt="">
+                        </div>
+                        <div class="item-name">Tai nghe Bluetooth AirPods 2 Apple MV7N2</div>
+                        <div class="item-price">3.390.000 đ</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
