--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 
 <body>
     <div class="app">
+
+        <!-- banner right -->
+        <div class="banner-left">
+            <img src="https://cdn.tgdd.vn/2022/03/banner/2-79x271.png" alt="">
+        </div>
+        
+        <!-- banner left -->
+        <div class="banner-right">
+            <img src="https://cdn.tgdd.vn/2022/03/banner/33-79x271.png" alt="">
+        </div>
+
         <!-- head -->
         <div class="head">
             <div class="head-top">
