--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="banner-left">
             <img src="https://cdn.tgdd.vn/2022/03/banner/2-79x271.png" alt="">
         </div>
-        
+
         <!-- banner left -->
         <div class="banner-right">
             <img src="https://cdn.tgdd.vn/2022/03/banner/33-79x271.png" alt="">
@@ -50,6 +50,11 @@
                 </div>
                 <div class="head-history">
                     Lịch sử đơn hàng
+                </div>
+                <div class="head-right">
+                    <div class="head-right-item">24h Công nghệ</div>
+                    <div class="head-right-item">Hỏi đáp</div>
+                    <div class="head-right-item">Game App</div>
                 </div>
             </div>
             <div class="head-bottom">
