--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="homebanner-control">
                         <div class="homebanner-control-item">1</div>
-                        <div class="homebanner-control-item">2</div>
+                        <div class="homebanner-control-item active">2</div>
                         <div class="homebanner-control-item">3</div>
                         <div class="homebanner-control-item">4</div>
                     </div>
