--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
             </div>
             <div class="head-bottom">
                 <div class="head-menu">
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
-                    <div class="head-menu-item"><i class="bi bi-laptop"></i>Laptop</div>
+                    <div class="head-menu-item"><i class="bi bi-phone"></i>Điện thoại</div>
+                    <div class="head-menu-item active"><i class="bi bi-laptop"></i>Laptop</div>
+                    <div class="head-menu-item"><i class="bi bi-tablet-fill"></i>Tablet</div>
+                    <div class="head-menu-item"><i class="bi bi-headphones"></i>Phụ kiện</div>
+                    <div class="head-menu-item"><i class="bi bi-watch"></i>Đồng hồ thông minh</div>
+                    <div class="head-menu-item"><i class="bi bi-gem"></i>AVAJi</div>
+                    <div class="head-menu-item"><i class="bi bi-pc-display"></i>PC, Máy in</div>
+                    <div class="head-menu-item">Máy cũ giá rẻ</div>
+                    <div class="head-menu-item">Sim, Thẻ cào</div>
+                    <div class="head-menu-item">Trả góp, điện nước</div>
                 </div>
             </div>
         </div>
@@ -124,7 +124,27 @@
                     <div class="item">
                         <div class="item-text">Trả góp 0%</div>
                         <div class="item-img">
-                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg"
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/271717/oppo-reno7-z-5g-thumb-1-1-600x600.jpg"
+                                alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/239747/oppo-reno6-z-5g-aurora-1-600x600.jpg"
+                                alt="">
+                        </div>
+                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-text">Trả góp 0%</div>
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/247507/samsung-galaxy-a52s-5g-mint-600x600.jpg"
                                 alt="">
                         </div>
                         <div class="item-name">iPhone 13 Pro Max 128GB</div>
@@ -144,27 +164,7 @@
                     <div class="item">
                         <div class="item-text">Trả góp 0%</div>
                         <div class="item-img">
-                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg"
-                                alt="">
-                        </div>
-                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
-                        <div class="item-price">33.999.000 đ</div>
-                        <div class="item-gift">Quà 1.600.000 đ</div>
-                    </div>
-                    <div class="item">
-                        <div class="item-text">Trả góp 0%</div>
-                        <div class="item-img">
-                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg"
-                                alt="">
-                        </div>
-                        <div class="item-name">iPhone 13 Pro Max 128GB</div>
-                        <div class="item-price">33.999.000 đ</div>
-                        <div class="item-gift">Quà 1.600.000 đ</div>
-                    </div>
-                    <div class="item">
-                        <div class="item-text">Trả góp 0%</div>
-                        <div class="item-img">
-                            <img src="https://cdn.tgdd.vn/Products/Images/42/230529/iphone-13-pro-max-gold-1-600x600.jpg"
+                            <img src="https://cdn.tgdd.vn/Products/Images/42/261888/realme-c35-GREEN-thumb-600x600.jpg"
                                 alt="">
                         </div>
                         <div class="item-name">iPhone 13 Pro Max 128GB</div>
@@ -358,7 +358,16 @@
                 <div class="box-common-main">
                     <div class="item">
                         <div class="item-img">
-                            <img src="https://cdn.tgdd.vn/Products/Images/44/239552/macbook-air-m1-2020-gray-600x600.jpg"
+                            <img src="https://cdn.tgdd.vn/Products/Images/522/247510/Samsung-Galaxy-Tab-s8-white-thumb-1-600x600.jpg"
+                                alt="">
+                        </div>
+                        <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
+                        <div class="item-price">33.999.000 đ</div>
+                        <div class="item-gift">Quà 1.600.000 đ</div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="https://cdn.tgdd.vn/Products/Images/44/269603/lenovo-ideapad-3-14itl6-i5-1135g7-8gb-512gb-600x600.jpg"
                                 alt="">
                         </div>
                         <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
@@ -376,7 +385,7 @@
                     </div>
                     <div class="item">
                         <div class="item-img">
-                            <img src="https://cdn.tgdd.vn/Products/Images/44/239552/macbook-air-m1-2020-gray-600x600.jpg"
+                            <img src="https://cdn.tgdd.vn/Products/Images/44/263980/acer-nitro-5-gaming-an515-45-r6ev-r5-5600h-8gb-600x600.jpg"
                                 alt="">
                         </div>
                         <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
@@ -385,16 +394,7 @@
                     </div>
                     <div class="item">
                         <div class="item-img">
-                            <img src="https://cdn.tgdd.vn/Products/Images/44/239552/macbook-air-m1-2020-gray-600x600.jpg"
-                                alt="">
-                        </div>
-                        <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
-                        <div class="item-price">33.999.000 đ</div>
-                        <div class="item-gift">Quà 1.600.000 đ</div>
-                    </div>
-                    <div class="item">
-                        <div class="item-img">
-                            <img src="https://cdn.tgdd.vn/Products/Images/44/239552/macbook-air-m1-2020-gray-600x600.jpg"
+                            <img src="https://cdn.tgdd.vn/Products/Images/44/271817/lenovo-ideapad-3-15itl6-i3-82h801nevn-140222-125845-600x600.jpg"
                                 alt="">
                         </div>
                         <div class="item-name">MacBook Air M1 2020 7-core GPU</div>
@@ -494,23 +494,8 @@
 
         <!-- footer -->
         <div class="footer">
-            <div class="footer-list">
-                <div class="footer-list-item">1</div>
-                <div class="footer-list-item">2</div>
-                <div class="footer-list-item">3</div>
-            </div>
-            <div class="footer-list">
-                <div class="footer-list-item">1</div>
-                <div class="footer-list-item">2</div>
-                <div class="footer-list-item">3</div>
-            </div>
-            <div class="footer-list">
-                <div class="footer-list-item">1</div>
-                <div class="footer-list-item">2</div>
-                <div class="footer-list-item">3</div>
-            </div>
+            footer
         </div>
-    </div>
 </body>
 
 </html>
